feature: Auth Cleanup and case refactors
* Starting cleanup

* Cleaning up

* Updating doc

* Removing make swag from pre commit

* Adding .gitignore

* Adding .idea to .gitinogre

* Fixing linter

* Cleanup pending infra issue

* Adding Debug file

* Fixing linter

* Fixing linter

* Adding Swagger gen in Make start

---------
