# docs/swagger.yaml
@@ -5,23 +5,27 @@ definitions:
       message:
         type: string
     type: object
-  handler.MessageResponse:
+  handler.ResponseSuccess:
     properties:
       message:
         type: string
+    type: object
+  handler.SuccessResponse:
+    properties:
+      data: {}
     type: object
   model.CreateUserRequest:
     properties:
       email:
         type: string
-      firstName:
+      name:
         type: string
       password:
         minLength: 12
         type: string
     required:
     - email
-    - firstName
+    - name
     - password
     type: object
   model.LoginRequest:
@@ -34,28 +38,6 @@ definitions:
     - email
     - password
     type: object
-  model.LoginResponse:
-    properties:
-      token:
-        type: string
-      user:
-        $ref: '#/definitions/model.User'
-    type: object
-  model.User:
-    properties:
-      created_at:
-        type: string
-      email:
-        type: string
-      first_name:
-        type: string
-      id:
-        type: string
-      last_login_at:
-        type: string
-      updated_at:
-        type: string
-    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -63,6 +45,21 @@ info:
   title: Key Haven API
   version: "1.0"
 paths:
+  /:
+    get:
+      consumes:
+      - application/json
+      description: Check if the service is healthy
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.ResponseSuccess'
+      summary: Check if the service is healthy
+      tags:
+      - health
   /auth/login:
     post:
       consumes:
@@ -81,7 +78,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.LoginResponse'
+            $ref: '#/definitions/handler.SuccessResponse'
         "400":
           description: Invalid request body
           schema:
@@ -106,7 +103,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handler.MessageResponse'
+            $ref: '#/definitions/handler.SuccessResponse'
         "401":
           description: Unauthorized
           schema:
@@ -134,7 +131,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/model.User'
+            $ref: '#/definitions/handler.SuccessResponse'
         "400":
           description: Invalid request body
           schema:
